# src/main/java/io/github/supplierratingsoftware/supplierratingbackend/controller/OrderController.java
@@ -1,7 +1,7 @@
 package io.github.supplierratingsoftware.supplierratingbackend.controller;
 
 import io.github.supplierratingsoftware.supplierratingbackend.dto.api.OrderCreationDto;
-import io.github.supplierratingsoftware.supplierratingbackend.dto.api.OrderReadDto;
+import io.github.supplierratingsoftware.supplierratingbackend.dto.api.OrderDetailDto;
 import io.github.supplierratingsoftware.supplierratingbackend.dto.api.OrderUpdateDto;
 import io.github.supplierratingsoftware.supplierratingbackend.service.OrderService;
 import jakarta.validation.Valid;
@@ -29,10 +29,10 @@ public class OrderController {
      * Optionally filters for orders belonging to a specific supplier.
      *
      * @param supplierId (Optional) The suppliers PermID to filter for, or null to retrieve all orders.
-     * @return ResponseEntity containing a list of OrderReadDto objects representing all orders.
+     * @return ResponseEntity containing a list of OrderDetailDto objects representing all orders.
      */
     @GetMapping
-    public ResponseEntity<List<OrderReadDto>> getAllOrders(@RequestParam(required = false) String supplierId) {
+    public ResponseEntity<List<OrderDetailDto>> getAllOrders(@RequestParam(required = false) String supplierId) {
         return ResponseEntity.ok(orderService.getAllOrders(supplierId));
     }
 
@@ -40,10 +40,10 @@ public class OrderController {
      * Retrieves an order by its OpenBIS PermID.
      *
      * @param id The PermID of the order to retrieve.
-     * @return ResponseEntity containing the OrderReadDto of the retrieved order.
+     * @return ResponseEntity containing the OrderDetailDto of the retrieved order.
      */
     @GetMapping("/{id}")
-    public ResponseEntity<OrderReadDto> getOrderById(@PathVariable String id) {
+    public ResponseEntity<OrderDetailDto> getOrderById(@PathVariable String id) {
         return ResponseEntity.ok(orderService.getOrderById(id));
     }
 
@@ -51,11 +51,11 @@ public class OrderController {
      * Creates a new order.
      *
      * @param creationDto The payload containing the new order details.
-     * @return The created {@link OrderReadDto} wrapped in a ResponseEntity with HTTP 201 Created.
+     * @return The created {@link OrderDetailDto} wrapped in a ResponseEntity with HTTP 201 Created.
      */
     @PostMapping
-    public ResponseEntity<OrderReadDto> createOrder(@RequestBody @Valid OrderCreationDto creationDto) {
-        OrderReadDto createdOrder = orderService.createOrder(creationDto);
+    public ResponseEntity<OrderDetailDto> createOrder(@RequestBody @Valid OrderCreationDto creationDto) {
+        OrderDetailDto createdOrder = orderService.createOrder(creationDto);
         return ResponseEntity
                 .status(HttpStatus.CREATED)
                 .body(createdOrder);
@@ -66,14 +66,14 @@ public class OrderController {
      *
      * @param id        The PermID of the order to update.
      * @param updateDto The payload containing the updated order details.
-     * @return The updated {@link OrderReadDto}.
+     * @return The updated {@link OrderDetailDto}.
      */
     @PutMapping("/{id}")
-    public ResponseEntity<OrderReadDto> updateOrder(
+    public ResponseEntity<OrderDetailDto> updateOrder(
             @PathVariable String id,
             @RequestBody @Valid OrderUpdateDto updateDto) {
 
-        OrderReadDto updatedOrder = orderService.updateOrder(id, updateDto);
+        OrderDetailDto updatedOrder = orderService.updateOrder(id, updateDto);
         return ResponseEntity.ok(updatedOrder);
     }
 }
