# src/main/java/io/github/supplierratingsoftware/supplierratingbackend/dto/api/SupplierDetailDto.java
@@ -6,6 +6,10 @@ import java.util.List;
 
 /**
  * Represents a supplier.
+ * <p>
+ * <strong>NOTE:</strong> This DTO is used for both: SupplierDetailDTO and SupplierSummaryDTO
+ * The SupplierSummaryDTO is generated by filtering out the 'orders' field from this DTO.
+ * because it is empty (null) anyway in case of a "get all call".</p>
  *
  * <p><strong>JSON Example:</strong></p>
  * <pre>
@@ -51,7 +55,7 @@ import java.util.List;
  * @param orders         The orders belonging to this supplier.
  * @see RatingStatsDto
  */
-public record SupplierReadDto(
+public record SupplierDetailDto(
         String name,
         String customerNumber,
         String addition,
@@ -74,6 +78,6 @@ public record SupplierReadDto(
         // Include the orders field only in detailed view.
         // In other views, the orders field will be null and the JSON serializer will ignore it.
         @JsonInclude(JsonInclude.Include.NON_NULL)
-        List<OrderReadDto> orders
+        List<OrderDetailDto> orders
 ) {
 }
